# simslime

./: .gitignore  Cargo.toml  flake.nix
assets/: shaders.wgsl
src/: main.rs
