[package]
name = "simslime"
version = "0.1.0"
edition = "2024"

[dependencies]
cubecl = { version = "0.8.1", features = ["wgpu"] }
rerun = "0.28.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
bytemuck = "1.24"

[profile.release]
lto = "fat"

[lints.clippy]
pedantic = "warn"
